Fix esbuild problem ("process is undefined")